--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="row align-items-center mt-4">
             <div class="col-lg-6 mx-auto">
-                <div class="card pt-5 pb-5 pr-5 pl-5 border bg-light text-center">
+                <div class="card pt-5 pb-5 pr-5 pl-5 bg-light text-center">
                     <h1>
                         <b>Recieve our contact info and Résumés</b>
                     </h1>
