--- a/index.html
+++ b/index.html
@@ -33,48 +33,41 @@
             <div class="col-lg-6 mx-auto">
                 <div class="card pt-5 pb-5 pr-5 pl-5 bg-light text-center">
                     <h1>
-                        <b>Recieve our contact info and Résumés</b>
+                        <b>We'll send our info!</b>
                     </h1>
                     <hr />
                     <h3>Thank you for checking out our project
                     </h3>
                     <hr />
-                    <h2>
-                        <b>Rate our project:</h2>
-                    </b>
+                    <h2 class="mb-4">
+                        <b>Rate our project:</b>
+                    </h2>
+
                     <div>
-                        <div class="row">
+                        <div class="row mb-3">
                             <div class="col-md-3">
                                 <a href="#" id="click-button1">
                                     <h1 class="border pt-3 pb-3" id="emoji">👍</h1>
-                                    <h1>
-                                        <span id="click-value1"></span>
-                                    </h1>
                                 </a>
+                                <h1 id="click-value1"></h1>
                             </div>
                             <div class="col-md-3">
                                 <a href="#" id="click-button2">
                                     <h1 class="border pt-3 pb-3" id="emoji">👏</h1>
-                                    <h1>
-                                        <span id="click-value2"></span>
-                                    </h1>
                                 </a>
+                                <h1 id="click-value2"></h1>
                             </div>
                             <div class="col-md-3">
                                 <a href="#" id="click-button3">
                                     <h1 class="border pt-3 pb-3" id="emoji">🤟</h1>
-                                    <h1>
-                                        <span id="click-value3"></span>
-                                    </h1>
                                 </a>
+                                <h1 id="click-value3"></h1>
                             </div>
                             <div class="col-md-3">
                                 <a href="#" id="click-button4">
                                     <h1 class="border pt-3 pb-3" id="emoji">🙌</h1>
-                                    <h1>
-                                        <span id="click-value4"></span>
-                                    </h1>
                                 </a>
+                                <h1 id="click-value4"></h1>
                             </div>
                         </div>
                     </div>
@@ -83,11 +76,10 @@
             </div>
 
             <div class="col-lg-6 mx-auto">
-                <div class="card bg-light pr-5 pl-5 pt-4">
+                <div class="card bg-light pr-5 pl-5 pt-3">
                     <div class="card-heading">
-                        <h3 class="card-title">Enter info here:</h3>
+                        <h4 class="card-title">If interested in learning about us, please fill out this form:</h4>
                     </div>
-                    <hr />
                     <div class="card-body">
                         <form role="form">
                             <div class="form-group row">
