--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <label for="comment-input">Comments:</label>
                                 <textarea class="form-control" id="comment-input" rows="5"></textarea>
                             </div>
-                            <button class="btn btn-default pr-5 pl-5" id="add-user" type="submit" onclick="RunLoading()">Submit</button>
+                            <input class="btn btn-default pr-5 pl-5" id="add-user" type="submit" onclick="RunLoading()"></input>
                         </form>
                     </div>
                 </div>
