--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
     <div id="showAll" class="container">
 
-        <div class="row align-items-center mt-4">
+        <div class="row align-items-center">
             <div class="col-lg-6 mx-auto">
                 <div class="card pt-5 pb-5 pr-5 pl-5 bg-light text-center">
-                    <h1>
+                    <h2>
                         <b>We'll send our info!</b>
-                    </h1>
+                    </h2>
                     <hr />
-                    <h3 class="mb-4">
+                    <h3 class="mt-4 mb-4">
                         Did you like our game?
                     </h3>
 
@@ -46,32 +46,32 @@
                                 <a href="#" id="click-button1">
                                     <h1 class="border pt-3 pb-3" id="emoji">👍</h1>
                                 </a>
-                                <h1 id="click-value1"></h1>
+                                <h1>+<span id="click-value1"></span></h1>
                             </div>
                             <div class="col-md-3">
                                 <a href="#" id="click-button2">
                                     <h1 class="border pt-3 pb-3" id="emoji">👌</h1>
                                 </a>
-                                <h1 id="click-value2"></h1>
+                                <h1>+<span id="click-value2"></span></h1>
                             </div>
                             <div class="col-md-3">
                                 <a href="#" id="click-button3">
                                     <h1 class="border pt-3 pb-3" id="emoji">🤟</h1>
                                 </a>
-                                <h1 id="click-value3"></h1>
+                                <h1>+<span id="click-value3"></span></h1>
                             </div>
                             <div class="col-md-3">
                                 <a href="#" id="click-button4">
                                     <h1 class="border pt-3 pb-3" id="emoji">👎</h1>
                                 </a>
-                                <h1 id="click-value4"></h1>
+                                <h1>+<span id="click-value4"></span></h1>
                             </div>
                         </div>
                     </div>
                     <hr />
                     <h2 class="mb-4">
-                            <b>Thank you for checking out our project!</b>
-                        </h2>
+                        <b>Thank you for checking out our project!</b>
+                    </h2>
                 </div>
 
             </div>
@@ -79,7 +79,9 @@
             <div class="col-lg-6 mx-auto">
                 <div class="card bg-light pr-5 pl-5 pt-3">
                     <div class="card-heading">
-                        <h3 class="card-title"><b>Want to know more?</b></h3>
+                        <h3 class="card-title">
+                            <b>Want to know more?</b>
+                        </h3>
                         <h4 class="card-title">Please fill out this form and we will send our info</h4>
                     </div>
                     <div class="card-body">
