fix spacing issues, afix card heights

--- a/index.html
+++ b/index.html
@@ -31,17 +31,14 @@
 
         <div class="row align-items-center">
             <div class="col-lg-6 mx-auto">
-                <div class="card pt-5 pb-5 pr-5 pl-5 bg-light text-center">
+                <div class="card bg-light text-center">
                     <h2>
-                        <b>We'll send our info!</b>
+                        <b>Did you like our game?</b>
                     </h2>
-                    <hr />
-                    <h3 class="mt-4 mb-4">
-                        Did you like our game?
-                    </h3>
-
+                    <br />
+                    <br />
                     <div>
-                        <div class="row mb-3">
+                        <div class="row mb-3 mr-3 ml-3">
                             <div class="col-md-3">
                                 <a href="#" id="click-button1">
                                     <h1 class="border pt-3 pb-3" id="emoji">👍</h1>
@@ -68,37 +65,37 @@
                             </div>
                         </div>
                     </div>
-                    <hr />
-                    <h2 class="mb-4">
-                        <b>Thank you for checking out our project!</b>
-                    </h2>
+                    
+                    <h6 class="thanks">
+                        Thank you for checking out our project!
+                    </h6>
                 </div>
 
             </div>
 
             <div class="col-lg-6 mx-auto">
-                <div class="card bg-light pr-5 pl-5 pt-3">
+                <div class="card bg-light">
                     <div class="card-heading">
-                        <h3 class="card-title">
+                        <h2 class="card-title">
                             <b>Want to know more?</b>
-                        </h3>
-                        <h4 class="card-title">Please fill out this form and we will send our info</h4>
+                        </h2>
+                        <h6 class="card-title">Please fill out this form and we'll send our info</h6>
                     </div>
                     <div class="card-body">
                         <form role="form">
                             <div class="form-group row">
-                                <label for="name-input">Name:</label>
-                                <input class="form-control" id="name-input" type="text" placeholder="Christopher Huynh">
+                                <label for="name-input"></label>
+                                <input class="form-control" id="name-input" type="text" placeholder="Name: Christopher Huynh">
                             </div>
                             <div class="form-group row">
-                                <label for="email-input">Email:</label>
-                                <input class="form-control" id="email-input" type="email" placeholder="pretty-clouds@cumulus.com">
+                                <label for="email-input"></label>
+                                <input class="form-control" id="email-input" type="email" placeholder="Email: pretty-clouds@cumulus.com">
                             </div>
                             <div class="form-group row">
-                                <label for="comment-input">Comments:</label>
-                                <textarea class="form-control" id="comment-input" rows="5" placeholder="Your project is A-M-A-Z-I-N-G!"></textarea>
+                                <label for="comment-input"></label>
+                                <textarea class="form-control" id="comment-input" rows="5" placeholder="Comments: Your project is A-M-A-Z-I-N-G!"></textarea>
                             </div>
-                            <input class="btn btn-default pr-5 pl-5" id="add-user" type="submit" onclick="RunLoading()"></input>
+                            <input class="btn btn-default" id="add-user" type="submit" onclick="RunLoading()"></input>
                         </form>
                     </div>
                 </div>
