--- a/index.html
+++ b/index.html
@@ -39,33 +39,42 @@
                     <br />
                     <div>
                         <div class="row mb-3 mr-3 ml-3">
-                            <div class="col-md-3">
-                                <a href="#" id="click-button1">
-                                    <h1 class="border pt-3 pb-3" id="emoji">👍</h1>
-                                </a>
-                                <h1>+<span id="click-value1"></span></h1>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="#" id="click-button2">
-                                    <h1 class="border pt-3 pb-3" id="emoji">👌</h1>
-                                </a>
-                                <h1>+<span id="click-value2"></span></h1>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="#" id="click-button3">
-                                    <h1 class="border pt-3 pb-3" id="emoji">🤟</h1>
-                                </a>
-                                <h1>+<span id="click-value3"></span></h1>
-                            </div>
-                            <div class="col-md-3">
+                            <div class="col-md-4">
                                 <a href="#" id="click-button4">
                                     <h1 class="border pt-3 pb-3" id="emoji">👎</h1>
                                 </a>
-                                <h1>+<span id="click-value4"></span></h1>
+                                <h1>+
+                                    <span id="click-value4"></span>
+                                </h1>
                             </div>
+                            <div class="col-md-4">
+                                <a href="#" id="click-button1">
+                                    <h1 class="border pt-3 pb-3" id="emoji">👌</h1>
+                                </a>
+                                <h1>+
+                                    <span id="click-value1"></span>
+                                </h1>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="#" id="click-button2">
+                                    <h1 class="border pt-3 pb-3" id="emoji">🤟</h1>
+                                </a>
+                                <h1>+
+                                    <span id="click-value2"></span>
+                                </h1>
+                            </div>
+                            <!-- <div class="col-md-3">
+                                <a href="#" id="click-button3">
+                                    <h1 class="border pt-3 pb-3" id="emoji">👍</h1>
+                                </a>
+                                <h1>+
+                                    <span id="click-value3"></span>
+                                </h1>
+                            </div> -->
+
                         </div>
                     </div>
-                    
+
                     <h6 class="thanks">
                         Thank you for checking out our project!
                     </h6>
