removed deprecrated function RunLoading()

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <label for="comment-input"></label>
                                 <textarea class="form-control" id="comment-input" rows="5" placeholder="Comments: Your project is A-M-A-Z-I-N-G!"></textarea>
                             </div>
-                            <input class="btn btn-default" id="add-user" type="submit" onclick="RunLoading()"></input>
+                            <input class="btn btn-default" id="add-user" type="submit"></input>
                         </form>
                     </div>
                 </div>
